SourceCode/Infrastructure/gitops/environments/dt/10KScraper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: 10kscraper
    environment: dt
  name: tenkscraper-svc
  namespace: dataproc-dt
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: 10kscraper-mapping
      service: tenkscraper-svc.dataproc-dt:8787
      prefix: /
      host: 10kscraper.apps.openshift-nonprod.gh-mdas.com
spec:
  ports:
  - name: tenkscraper-8787
    port: 8787
    protocol: TCP
    targetPort: 8787
  selector:
    app: 10kscraper
  sessionAffinity: None
  type: ClusterIP
