SourceCode/Infrastructure/gitops/environments/dt/zeppelin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zeppelin
    environment: dt
  name: zeppelin-svc
  namespace: zeppelin-dt
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: zeppelin-mapping
      service: zeppelin-svc.zeppelin-dt:8080
      prefix: /
      host: zeppelin.apps.openshift-nonprod.gh-mdas.com
spec:
  ports:
  - name: zeppelin-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: zeppelin
  sessionAffinity: None
  type: ClusterIP
